assets/css/style.css
header, body, section, article, footer, nav, figure, figcaption {
        display: block;
}
body {
	background-color: #ffffff;
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	margin: 0;
}
header {
	background-color: #ffffff;
	border-bottom: 2px solid #cccccc;
	font-family: Georgia, Times, "Times New Roman", serif;
	display: inline;
	float: left;
	width: 100%;
	height: 96px;
	min-width: 1186px;
}
h1 {
	color: #ffffff;
	background-color: #4aaaa5;
	text-align: center;
	padding: 30px;
	width: 150px;
	margin-left: 90px;
	float: left;
	margin-top: 0;
	margin-bottom: 0;
}
#article_header, h2, h3 {
	color: #4aaaa5;
	font-family: Georgia, Times, "Times New Roman", serif;
}
#site_nav {
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	margin-top: 40px;
	width: 270px;
	float: left;
	margin-left: 460px;
}
a:link, a:visited {
	text-decoration: none;
	color: #999999;
}
ul {
	list-style-type: none;
}
li, .divider {
	display: inline;
}
.divider {
	color: #efefef;
	margin-left: 10px;
	margin-right: 10px;	
}
section {
	background-image: url(../../assets/images/light_honeycomb.png);
	background-repeat: repeat;
	clear: both;
	float: left;
	width: 100%;
	min-width: 1186px;
}
article {
	width: 590px;
	background-color: #ffffff;
	color: #777777;
	margin-left: 90px;
	padding: 30px;
	float: left;
	margin-top: 40px;
	border: 2px solid #dddddd;
}
#userpic {
	margin-top: 20px;
	margin-bottom: 20px;
	margin-right: 20px;
	float: left;
	width: 160px;
 	height: 160px;
 	background-image: url(../../assets/images/amindwi.gif);
 	background-position: 0 0;
}
#userpic:hover {
	background-position: 0 100%;
}
#about_me_divider {
	margin-top: 40px;
	margin-bottom: 40px;
	height: 4px;
	background-color: #dddddd;
	border: 0;
}
#about_me_text {
	float: left;
}
#my_text {
	line-height: 140%;
	text-align: justify;
	margin-top: 20px;
}
blockquote {
	margin-top: 25px;
    padding-left: 20px;
    line-height: 140%;
	text-align: justify;
}
blockquote:before {
	display: block;
	content: "\201C";
	font-size: 80px;
	float: left;
	color: #7a7a7a;
	margin-right: 10px;
	padding-bottom: 140px;
	margin-top: 20px;
}
#connect {
	background-color: #ffffff;
	width: 270px;
	color: #4aaaa5;
	text-align: center;
	margin-top: 40px;
	margin-left: 30px;
	float: left;
	padding-top: 15px;
	padding-bottom: 15px;
	border: 2px solid #dddddd;
}
#connect_divider {
	width: 170px;
	background: #efefef;
	border: 0;
	height: 2px;
	margin-left: 50px;
	margin-top: 25px;
	margin-bottom: 25px;
}
#connect_icons {
	padding: 0;
}
.icons {
	width: 60px;
	height: 60px;
}
#portfolio_divider {
	width: 590px;
	margin: 0;
	margin-top: 40px;
	height: 4px;
	background-color: #dddddd;
	border: 0;
}
#portfolio_table {
	float: left;
	margin-left: 0;
	padding-top: 12px;
	width: 590px;
}
.portfolio_rows {
	display: block;
	padding-top: 28px;
	padding-bottom: 28px;
}
.portfolio_col1 {
	padding: 0;
	padding-right: 20px;
	width: 275px;
}
.portfolio_col2 {
	padding: 0;
	padding-left: 20px;
	width: 275px;
}
.icon {
	height: 205px;
	width: 275px;
	margin-bottom: -70px;
	z-index: 5;
}
figure {
	margin: 0;
	width: 275px;
	height: 205px;
}
figcaption {
	background-color: #4aaaa5;
	color: #ffffff;
	text-align: center;
	z-index: 6;
	position: relative;
	padding-top: 14px;
	padding-bottom: 14px;
	font-family: Georgia, Times, "Times New Roman", serif;
	font-size: 20px;
}
#contact_divider {
	width: 588px;
	margin-left: 0;
	margin-top: 40px;
	height: 4px;
	background-color: #dddddd;
	border: 0;
}
#name, #email{
	height: 35px;
	width: 588px;
	font-size: 14px;
}
#message {
	width: 588px;
	height: 200px;
	font-size: 14px;
}
label {
	display: block;
	margin-top: 30px;
}
#submit {
	background-color: #4aaaa5;
	color: #ffffff;
	border: 0;
	margin-top: 20px;
	height: 40px;
	width: 116px;
	font-size: 20px;
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
}
footer {
	text-align: center;
	background-color: #666666;
	color: #cccccc;
	border-top: 10px solid #4aaaa5;
	padding-top: 40px;
	padding-bottom: 40px;
	clear: both;
	min-width: 1186px;
}
* {
margin: 0;
}
html, body {
height: 100%;
}
.wrapper {
min-height: 100%;
height: auto !important;
height: 100%;
margin: 0 auto -4em;
}
footer, .push {
height: 4em;
}

